--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ul>
     <li><a routerLink="simple">Simple Todo</a></li>
     <li><a routerLink="widgets">Todo Widgets</a></li>
-    <li class="logoLink"><a routerLink="">inova:solutions AG</a></li>
+    <!-- <li class="logoLink"><a routerLink="">inova:solutions AG</a></li> -->
   </ul>
 </nav>
 
