--- a/todo/src/app/todo-widgets/todo-widgets.component.html
+++ b/todo/src/app/todo-widgets/todo-widgets.component.html
@@ -1,18 +1,19 @@
-<p>todo-widgets works!</p>
-
 <div class="todoAdd">
-  <app-todo-add [isAddWidget]="true"></app-todo-add>
+  <app-todo-add [isAddWidget]="true" (addWidgetEvent)="getWidgets()"></app-todo-add>
 </div>
 <div class="widgets">
-  <div class="todoWidget" *ngFor="let number of [0,1,2,3,4,5]">
+  <div class="todoWidget" *ngFor="let widget of todoWidgets">
     <div class="widgetTitle">
-      <h5>Titel {{number}}</h5>
-      <button>Delete</button>
+      <h5>{{widget.title}}</h5>
+      <button (click)="onDelete(widget)">Delete</button>
     </div>
-    <div *ngFor="let number of [0,1,2,3,4,5]">
+    <div class="todoAddInWidget">
+      <app-todo-add></app-todo-add>
+    </div>
+    <!-- <div *ngFor="let number of [0,1,2,3,4,5]">
       <app-todo-item class="todoAddWidget"></app-todo-item>
 
-    </div>
+    </div> -->
 
   </div>
 
