--- a/todo/src/app/shared/todo-item/todo-item.component.html
+++ b/todo/src/app/shared/todo-item/todo-item.component.html
@@ -1,7 +1,9 @@
 <div class="items">
-  <p>todo-item works!</p>
+  <p>{{taskTitle}}</p>
 
-  <button>Check</button>
-  <button>Delete</button>
+  <div class="buttons">
+    <button>Check</button>
+    <button>Delete</button>
+  </div>
 
 </div>
