fix(todo): fixed delete and check functionality

--- a/todo/src/app/shared/todo-add/todo-add.component.html
+++ b/todo/src/app/shared/todo-add/todo-add.component.html
@@ -2,12 +2,12 @@
   <form>
     <div *ngIf="isAddWidget then buttonAddWidget; else buttonAddTodoToWidget"></div>
     <ng-template #buttonAddWidget>
-      <input #titleTodo type="text" (keydown.enter)="addWidget(titleTodo, $event)">
-      <button type="button" name="buttonAddWidget" (click)="addWidget(titleTodo, $event)">+ Erstellen</button>
+      <input [disabled]="inProgress" #titleTodo type="text" (keydown.enter)="addWidget(titleTodo, $event)">
+      <button [disabled]="inProgress" type="button" name="buttonAddWidget" (click)="addWidget(titleTodo, $event)">+ Erstellen</button>
     </ng-template>
     <ng-template class="addInWidget" #buttonAddTodoToWidget>
-      <input #titleTask type="text" (keydown.enter)="addTask(titleTask, $event)">
-      <button type="button" name="buttonAddTodoToWidget" (click)="addTask(titleTask, $event)">+</button>
+      <input [disabled]="inProgress" #titleTask type="text" (keydown.enter)="addTask(titleTask, $event)">
+      <button [disabled]="inProgress" type="button" name="buttonAddTodoToWidget" (click)="addTask(titleTask, $event)">+</button>
     </ng-template>
   </form>
 
