--- a/todo/src/app/todo-widgets/todo-widgets.component.html
+++ b/todo/src/app/todo-widgets/todo-widgets.component.html
@@ -1,19 +1,18 @@
 <div class="todoAdd">
-  <app-todo-add [isAddWidget]="true" (addWidgetEvent)="getWidgets()"></app-todo-add>
+  <app-todo-add [isAddWidget]="true" [inProgress]="isInProgess" (addWidgetEvent)="getWidgets()"></app-todo-add>
 </div>
 <div class="widgets">
-  <div id="{{widget.id}}" class="todoWidget" *ngFor="let widget of todoWidgets">
+  <div id="{{widget.id}}" class="todoWidget" *ngFor="let widget of todoViewModel">
     <div class="widgetTitle">
       <h5>{{widget.title}}</h5>
       <button (click)="onDelete(widget)">Delete</button>
     </div>
     <div class="todoAddInWidget">
-      <app-todo-add [isAddWidget]="false" (addTaskEvent)="getTasks()" [todoId]="widget.id"></app-todo-add>
+      <app-todo-add [inProgress]="isInProgess" [isAddWidget]="false" (addTaskEvent)="getWidgets()" [todoId]="widget.id"></app-todo-add>
     </div>
-    <div *ngFor="let task of tasks">
-      <app-todo-item class="todoAddWidget" [task]="task" (deleteTaskEvent)="getTasks()"></app-todo-item>
+    <div *ngFor="let task of filteredTasks(widget.id)"> <!-- gets the tasks per widget -->
+      <app-todo-item class="todoAddWidget" [task]="task" (deleteTaskEvent)="getWidgets()"></app-todo-item>
     </div>
-
   </div>
-
 </div>
+
