--- a/todo/src/app/shared/todo-item/todo-item.component.html
+++ b/todo/src/app/shared/todo-item/todo-item.component.html
@@ -10,8 +10,8 @@
 
 
   <div class="buttons">
-    <button (click)="onCheck(task)">Check</button>
-    <button (click)="onDelete(task?.id)">Delete</button>
+    <button [disabled]="inProgess" (click)="onCheck(task)">Check</button>
+    <button [disabled]="inProgess" (click)="onDelete(task?.id)">Delete</button>
   </div>
 
 </div>
