--- a/todo/src/app/todo-widgets/todo-widgets.component.css
+++ b/todo/src/app/todo-widgets/todo-widgets.component.css
@@ -9,7 +9,16 @@
   /* align-items: flex-start; */
 }
 
+.topLine {
+  display: flex;
+  justify-content: space-between;
+}
+
 .todoAdd {
+  padding-top: 1rem;
+}
+
+.todoSort {
   padding-top: 1rem;
 }
 
