--- a/todo/src/app/shared/todo-add/todo-add.component.css
+++ b/todo/src/app/shared/todo-add/todo-add.component.css
@@ -1,7 +1,7 @@
 
 .addTodoWidget > form {
   padding: 1rem 1rem;
-  background-color: gainsboro;
+  background-color: whitesmoke;
 }
 
 .addTodoWidget {
