--- a/todo/src/app/app.component.css
+++ b/todo/src/app/app.component.css
@@ -1,6 +1,6 @@
 ul {
   list-style: none;
-  background-color: black;
+  background-color: #ffffff;
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -17,7 +17,20 @@ li {
 a {
   display: block;
   text-decoration: none;
+  font-size: 1.2rem;
   padding: 1rem 1rem;
-  color: white;
+  color: #000;
+  transition: 0.2s;
 }
 
+a:hover {
+  color: #e81e75;
+  transition: 0.2s;
+}
+
+@media only screen and (max-width: 768px) {
+  ul {
+    display: flex;
+    flex-wrap: wrap-reverse;
+  }
+}
