--- a/todo/src/app/shared/todo-item/todo-item.component.css
+++ b/todo/src/app/shared/todo-item/todo-item.component.css
@@ -6,8 +6,13 @@
 
 p {
   padding-right: 1rem;
+  font-size: 0.9rem;
 }
 
 .isDone {
   text-decoration: line-through;
+}
+
+button {
+  margin-left: 0.2rem;
 }
