--- a/todo/src/app/todo-widgets/todo-widgets.component.html
+++ b/todo/src/app/todo-widgets/todo-widgets.component.html
@@ -3,7 +3,7 @@
     <app-todo-add [isAddWidget]="true" [inProgress]="isInProgess" (addWidgetEvent)="getWidgets()"></app-todo-add>
   </div>
   <div class="todoSort">
-    <label for="sort">To-Do Listen sortieren nach:</label>
+    <label for="sort">To-Do Liste sortieren nach:</label>
     <select id="sort" #selection (change)="onSortTodo(selection.value)">
       <option value="nothing" selected>Sortieren nach...</option>
       <option value="newest">Neuste zuerst</option>
@@ -22,7 +22,7 @@
       <app-todo-add [inProgress]="isInProgess" [isAddWidget]="false" (addTaskEvent)="getWidgets()" [todoId]="widget.id"></app-todo-add>
     </div>
     <div *ngFor="let task of filteredTasks(widget.id)"> <!-- gets tasks per widget -->
-      <app-todo-item [inProgess]="isInProgess" class="todoAddWidget" [task]="task" (deleteTaskEvent)="getWidgets()"></app-todo-item>
+      <app-todo-item [inProgess]="isInProgess" (inProgessEvent)="changeInProgress($event)" class="todoAddWidget" [task]="task" (deleteTaskEvent)="getWidgets()"></app-todo-item>
     </div>
   </div>
 </div>
