refactor(todo): task buttons flex

--- a/todo/src/app/shared/todo-item/todo-item.component.css
+++ b/todo/src/app/shared/todo-item/todo-item.component.css
@@ -4,8 +4,12 @@
   align-items: center;
 }
 
+.buttons {
+  display: flex;
+}
+
 p {
-  padding-right: 1rem;
+  padding-right: 0.6rem;
   font-size: 0.9rem;
 }
 
