refactor(todo): add title, renamed functions for data access

--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -1,8 +1,11 @@
+<div>
+  <h1><a routerLink="widgets">inova:todo</a></h1>
+</div>
+
 <nav class="navigation">
   <ul>
     <li><a routerLink="simple">Simple Todo</a></li>
     <li><a routerLink="widgets">Todo Widgets</a></li>
-    <li class="logoLink"><a routerLink="widgets">inova:todo</a></li>
   </ul>
 </nav>
 
