--- a/todo/src/app/app.component.css
+++ b/todo/src/app/app.component.css
@@ -1,3 +1,9 @@
+h1 > a {
+  color: #e81e75;
+  width: fit-content;
+  font-size: larger;
+}
+
 ul {
   list-style: none;
   background-color: #ffffff;
@@ -8,10 +14,6 @@ ul {
 
 li {
   float: left;
-}
-
-.logoLink {
-  float: right;
 }
 
 a {
