refactor(todo): div to ng-container

--- a/todo/src/app/shared/todo-add/todo-add.component.html
+++ b/todo/src/app/shared/todo-add/todo-add.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isAddWidget then buttonAddTodo; else buttonAddTask"></div>
+<ng-container *ngIf="isAddWidget then buttonAddTodo; else buttonAddTask"></ng-container>
 <ng-template #buttonAddTodo>
   <div class="addTodo">
     <form>
