add(todo): sidebar logic

--- a/todo/src/app/sidebar/sidebar.component.html
+++ b/todo/src/app/sidebar/sidebar.component.html
@@ -1,16 +1,11 @@
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
-<p>sidebar works!</p>
+<div class="sidebar" *ngFor="let todo of todoStore.todos$ | async">
+  <div class="button">
+    <button type="button" (click)="onClose()">x</button>
+  </div>
+  <div>
+    <h2>Todo Details</h2>
+    <p>Todo title: {{todo.title}}</p>
+    <p>Tasks: {{todo.tasks?.length}}</p>
+    <p>Created at: {{todo.createdAt | date}}</p>
+  </div>
+</div>
