--- a/todo/src/app/todo-widgets/todo-widgets.component.html
+++ b/todo/src/app/todo-widgets/todo-widgets.component.html
@@ -1,4 +1,4 @@
-
+<div>
   <div class="topLine">
     <div class="todoAdd">
       <app-todo-add
@@ -24,13 +24,15 @@
     </div>
   </div>
 
-  <div class="sidebar">
-    <app-sidebar></app-sidebar>
-  </div>
+  <ng-template [ngIf]="!closeSidebar">
+    <div class="sidebar">
+      <app-sidebar (closeSidebar)="setCloseSidebar($event)"></app-sidebar>
+    </div>
+  </ng-template>
 
 
   <div class="widgets">
-    <div id="{{widget.id}}" class="todoWidget" *ngFor="let widget of todoViewModel">
+    <div (click)="selectTodo(widget)" id="{{widget.id}}" class="todoWidget" *ngFor="let widget of todoViewModel">
       <div class="widgetTitle">
         <h5>{{widget.title}}</h5>
         <button
@@ -57,5 +59,5 @@
       </div>
     </div>
   </div>
-
+</div>
 
