--- a/todo/src/app/todo-widgets/todo-widgets.component.css
+++ b/todo/src/app/todo-widgets/todo-widgets.component.css
@@ -65,6 +65,11 @@ h5 {
   right: 0.5rem;
   margin-top: 1rem;
   padding: 1rem;
+  transition: 2s ease-in;
+}
+
+.detail {
+  padding-bottom: 0.5rem;
 }
 
 .disabled {
