add(todo): every task per todo in sidebar

--- a/todo/src/app/sidebar/sidebar.component.css
+++ b/todo/src/app/sidebar/sidebar.component.css
@@ -1,7 +1,18 @@
 .sidebar {
   display: flex;
+  height: 16rem;
+  overflow: auto;
 }
 
 .button {
   float: right;
+}
+
+.done {
+  text-decoration: line-through;
+}
+
+li {
+  list-style: decimal;
+  padding-bottom: 0.5rem;
 }
