--- a/todo/src/app/todo-widgets/todo-widgets.component.css
+++ b/todo/src/app/todo-widgets/todo-widgets.component.css
@@ -59,7 +59,7 @@ h5 {
 }
 
 .sidebar {
-  background-color: whitesmoke;
+  background-color: gainsboro;
   /* z-index: 1; */
   position: fixed;
   right: 0.5rem;
